Fixed layout problem with Vaadin dialog height in sitemap editor.

--- a/src-gwt/org/opencms/ade/sitemap/client/ui/css/sitemap.css
+++ b/src-gwt/org/opencms/ade/sitemap/client/ui/css/sitemap.css
@@ -9,7 +9,10 @@ body div.pageCenter {
 	margin: 0;
 	overflow: auto;
 	height: 100%;
-	padding-top: 72px;
+}
+
+.toolbar-toolbar + div {
+	margin-top: 72px;
 }
 
 /** joined vendor prefix style, for better fall back behavior */
